tests/snapshots/snapshots__insert_dialog_after_nl_parse_styled.snap
---
source: tests/snapshots.rs
assertion_line: 233
expression: buffer_to_styled(&buf)
---
{fg=#2a2f38 bg=#1a1d23}╭{/}{fg=#6b7280 bg=#1a1d23 mod=bold} フ{/} {fg=#6b7280 bg=#1a1d23 mod=bold}ィ{/} {fg=#6b7280 bg=#1a1d23 mod=bold}ル{/} {fg=#6b7280 bg=#1a1d23 mod=bold}タ{/} {fg=#6b7280 bg=#1a1d23 mod=bold}ー{/} {fg=#6b7280 bg=#1a1d23 mod=bold} {/}{fg=#2a2f38 bg=#1a1d23}────────────╮╭{/}{fg=#8aa9c9 bg=#1a1d23 mod=bold}Tuxedo Task{/}{fg=#2a2f38 bg=#1a1d23}  {/}{fg=#c8ccd4 bg=#1a1d23 mod=bold}/tmp/tuxedo-snapshot.txt{/}{fg=#6b7280 bg=#1a1d23} {/}{fg=#2a2f38 bg=#1a1d23}╮╭{/}{fg=#6b7280 bg=#1a1d23 mod=bold} デ{/} {fg=#6b7280 bg=#1a1d23 mod=bold}ィ{/} {fg=#6b7280 bg=#1a1d23 mod=bold}テ{/} {fg=#6b7280 bg=#1a1d23 mod=bold}ー{/} {fg=#6b7280 bg=#1a1d23 mod=bold}ル{/} {fg=#6b7280 bg=#1a1d23 mod=bold} {/}{fg=#2a2f38 bg=#1a1d23}────────────────────╮{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{bg=#1a1d23}                                      {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#7fb3a8 bg=#1a1d23 mod=bold} プ{/} {fg=#7fb3a8 bg=#1a1d23 mod=bold}ロ{/} {fg=#7fb3a8 bg=#1a1d23 mod=bold}ジ{/} {fg=#7fb3a8 bg=#1a1d23 mod=bold}ェ{/} {fg=#7fb3a8 bg=#1a1d23 mod=bold}ク{/} {fg=#7fb3a8 bg=#1a1d23 mod=bold}ト{/} {fg=#c8ccd4 bg=#1a1d23}           {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(2){/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#e07a7a bg=#1a1d23 mod=bold}PRIORITY A{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}────────────────────││{/}{fg=#6b7280 bg=#1a1d23} priority  {/}{fg=#e07a7a bg=#1a1d23 mod=bold}(A){/}{fg=#c8ccd4 bg=#1a1d23}                  {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#7fb3a8 bg=#1a1d23}+work           {/}{fg=#6b7280 bg=#1a1d23}  4{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#3a4150}  1 {/}{fg=#8aa9c9 bg=#3a4150 mod=bold}▸ {/}{fg=#e07a7a bg=#3a4150 mod=bold}(A) {/}{fg=#c8ccd4 bg=#3a4150}Finish Q2 board deck {/}{fg=#7fb3a8 bg=#3a4150}+work{/}{fg=#c8ccd4 bg=#3a4150} {/}{fg=#c89a6e bg=#3a4150}@{/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23} created   {/}{fg=#c8ccd4 bg=#1a1d23}2026-05-01           {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#7fb3a8 bg=#1a1d23}+health         {/}{fg=#6b7280 bg=#1a1d23}  3{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23}  2 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#e07a7a bg=#1a1d23 mod=bold}(A) {/}{fg=#c8ccd4 bg=#1a1d23}Call dentist to reschedule c{/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23} due       {/}{fg=#c8ccd4 bg=#1a1d23}2026-05-06  {/}{fg=#e07a7a bg=#1a1d23}today{/}{fg=#c8ccd4 bg=#1a1d23}    {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#7fb3a8 bg=#1a1d23}+finance        {/}{fg=#6b7280 bg=#1a1d23}  2{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(3){/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}PRIORITY B{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}────────────────────││{/}{fg=#6b7280 bg=#1a1d23} projects  {/}{fg=#7fb3a8 bg=#1a1d23}+work{/}{fg=#c8ccd4 bg=#1a1d23}                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#7fb3a8 bg=#1a1d23}+home           {/}{fg=#6b7280 bg=#1a1d23}  1{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23}  3 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}(B) {/}{fg=#c8ccd4 bg=#1a1d23}Review pull requests for aut{/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23} contexts  {/}{fg=#c89a6e bg=#1a1d23}@laptop{/}{fg=#c8ccd4 bg=#1a1d23}              {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#7fb3a8 bg=#1a1d23}+learning       {/}{fg=#6b7280 bg=#1a1d23}  1{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23}  4 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}(B) {/}{fg=#c8ccd4 bg=#1a1d23}Renew passport before summer{/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#7fb3a8 bg=#1a1d23}+personal       {/}{fg=#6b7280 bg=#1a1d23}  1{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23}  5 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}(B) {/}{fg=#c8ccd4 bg=#1a1d23}Draft hiring rubric for seni{/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23 mod=bold} ロ{/} {fg=#6b7280 bg=#1a1d23 mod=bold}ー{/} {fg=#c8ccd4 bg=#1a1d23}                           {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#7fb3a8 bg=#1a1d23}+travel         {/}{fg=#6b7280 bg=#1a1d23}  1{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(2){/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#7aa67a bg=#1a1d23 mod=bold}PRIORITY C{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}────────────────────││{/}{fg=#c8ccd4 bg=#1a1d23}                                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23}  6 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#7aa67a bg=#1a1d23 mod=bold}(C) {/}{fg=#c8ccd4 bg=#1a1d23}Pay quarterly estimated taxe{/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#e07a7a bg=#1a1d23 mod=bold}(A){/}{fg=#c8ccd4 bg=#1a1d23} 2026-05-01 Finish Q2 board {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c89a6e bg=#1a1d23 mod=bold} コ{/} {fg=#c89a6e bg=#1a1d23 mod=bold}ン{/} {fg=#c89a6e bg=#1a1d23 mod=bold}テ{/} {fg=#c89a6e bg=#1a1d23 mod=bold}キ{/} {fg=#c89a6e bg=#1a1d23 mod=bold}ス{/} {fg=#c89a6e bg=#1a1d23 mod=bold}ト{/} {fg=#c8ccd4 bg=#1a1d23}           {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23}  7 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#7aa67a bg=#1a1d23 mod=bold}(C) {/}{fg=#c8ccd4 bg=#1a1d23}Order new running shoes {/}{fg=#7fb3a8 bg=#1a1d23}+hea{/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23} deck {/}{fg=#7fb3a8 bg=#1a1d23}+work{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#c89a6e bg=#1a1d23}@laptop{/}{fg=#c8ccd4 bg=#1a1d23}             {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#c89a6e bg=#1a1d23}@errands        {/}{fg=#6b7280 bg=#1a1d23}  4{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(8{/}{fg=#2a2f38 bg=#1f232b}┌{/}{fg=#8aa9c9 bg=#1f232b mod=bold} ADD TASK {/}{fg=#2a2f38 bg=#1f232b}────────────────────────────┐{/}{fg=#e07a7a bg=#1a1d23 mod=bold}e:2026-05-06{/}{fg=#c8ccd4 bg=#1a1d23}                 {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#c89a6e bg=#1a1d23}@home           {/}{fg=#6b7280 bg=#1a1d23}  4{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23}  8{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                             {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#c89a6e bg=#1a1d23}@laptop         {/}{fg=#6b7280 bg=#1a1d23}  4{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23}  9{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#8aa9c9 bg=#1f232b mod=bold}› {/}{fg=#c89a6e bg=#1f232b}bank{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#d4b06a bg=#1f232b}due:2026-06-01{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}rec:+1m{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}t:-3d{/}{fg=#c8ccd4 bg=#1f232b}█{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                             {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#c89a6e bg=#1a1d23}@phone          {/}{fg=#6b7280 bg=#1a1d23}  3{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23} 10{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}ok · {/}{fg=#d4b06a bg=#1f232b}due 2026-06-01 {/}{fg=#6b7280 bg=#1f232b}· 1 +{/}{fg=#7fb3a8 bg=#1f232b}project {/}{fg=#6b7280 bg=#1f232b}1 @{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                             {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23} 11{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                             {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23} 12{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}format: {/}{fg=#e07a7a bg=#1f232b mod=bold}(A) {/}{fg=#c8ccd4 bg=#1f232b}Buy milk {/}{fg=#7fb3a8 bg=#1f232b}+shop {/}{fg=#c89a6e bg=#1f232b}@home {/}{fg=#d4b06a bg=#1f232b}due{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                             {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23} 13{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                             {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23} 14{/}{fg=#2a2f38 bg=#1f232b}└──────────────────────────────────────┘{/}{fg=#c8ccd4 bg=#1a1d23}                             {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#6b7280 bg=#1a1d23} 15 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#c8ccd4 bg=#1a1d23}    Replace bathroom faucet wash{/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                      {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                      {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                      {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                      {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                      {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                      {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                      {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                      {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                        {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                      {/}{fg=#2a2f38 bg=#1a1d23}││{/}{fg=#c8ccd4 bg=#1a1d23}                                {/}{fg=#2a2f38 bg=#1a1d23}│{/}
{fg=#2a2f38 bg=#1a1d23}╰────────────────────────╯╰──────────────────────────────────────╯╰────────────────────────────────╯{/}
{fg=#1a1d23 bg=#8aa9c9 mod=bold} NORMAL · parsed natural language; press Enter to save {/}{bg=#252a33} {/}{fg=#6b7280 bg=#252a33}15 open · 2026-05-06 · Tuxedo Task 2026.7.1 {/}
